# fl-chemsafe

./: README.md
federated_analytics/: .gitignore  README.md  client_app.py  pyproject.toml  server_app.py  task.py
federated_analytics/data/: HuskinDB_clean.csv  NCSU_USEPA_clean.csv  SkinPiX_clean.csv
federated_analytics/plots/: nonnoise_hist.pkl
horizontal_fl/: .gitignore  README.md  baseline_models_evaluation.py  create_performance_plot.py  create_tukey_comparison.py  create_umap_plot.py  data_preparation.py  pyproject.toml  server_app.py  task.py
horizontal_fl/data/: ai4cosmetics_data.csv  chemical_metadata.pkl  processed_data_splits.pkl  wilm_et_al_skindoctorcp_data.csv
horizontal_fl/horizontal_fl/: client_app.py  server_app.py  task.py
horizontal_fl/models/: centralised_combined_model.pkl  global_federated_model.json
horizontal_fl/results/: complete_comparison.csv  global_test_predictions.csv
vertical_fl/: README.md  client_app.py  create_performance_visualization.py  data_preparation.py  evaluate_local_models.py  pyproject.toml  server_app.py  task.py
vertical_fl/data/: metadata.json  vocab.json  xu2012_data.csv
vertical_fl/results/: federated_results.json  local_model_results.json  performance_comparison.json
vertical_fl/vertical_fl/: client_app.py  server_app.py  task.py
