[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-analytics"
version = "0.1.0"
description = "Federated Analytics for Chemical Safety Data Distribution Analysis"
dependencies = [
    "flwr==1.20.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "plotly==6.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "chemfl"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
